Just commit my file biko

--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <title>Photosec</title>
+  <title>Stylesthetic</title>
 
   <!-- slider stylesheet -->
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
@@ -56,8 +56,8 @@
             <a class="active" href="about.html">
               About
             </a>
-            <a class="" href="portfolio.html">
-              Portfolio
+            <a class="" href="goals.html">
+              Goals
             </a>
             <a class="" href="team.html">
               Team
@@ -66,11 +66,11 @@
         </div>
         <a class="navbar-brand" href="index.html">
           <span>
-            Photosec
+            aesthetic
           </span>
         </a>
         <a href="" class="call_btn">
-          Call Us Now
+          Call Us now
         </a>
       </nav>
     </header>
@@ -92,9 +92,9 @@
             </h2>
           </div>
           <p>
-            It is a long established fact that a reader will be distracted by the readable content of a page when
-            looking at its layout. The point of using LoremIt is a long established fact that a reader will be
-            distracted by the readable content of a page when looking at its layout. The point of using Lorem
+               The passion behind fashion and the embracement of your aesthetic. Our new be-youth-ful collection followed with other suprise 
+               collections we have this winter season would not only make younthe talk of the town but the diamond of the season. Stay tuned
+               and stay fashionable.
           </p>
           <a href="">
             Read More
@@ -134,13 +134,13 @@
                 <a href="">
                   <i class="fa fa-phone" aria-hidden="true"></i>
                   <span>
-                    Call +01 1234567890
+                    Call +234 90344567
                   </span>
                 </a>
                 <a href="">
                   <i class="fa fa-envelope" aria-hidden="true"></i>
                   <span>
-                    demo@gmail.com
+                    ramo@gmail.com
                   </span>
                 </a>
               </div>
