--- a/about.html
+++ b/about.html
@@ -93,7 +93,7 @@
           </div>
           <p>
                The passion behind fashion and the embracement of your aesthetic. Our new be-youth-ful collection followed with other suprise 
-               collections we have this winter season would not only make younthe talk of the town but the diamond of the season. Stay tuned
+               collections we have this winter season would not only make you the talk of the town but the diamond of the season. Stay tuned
                and stay fashionable.
           </p>
           <a href="">
