--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <title>Photosec</title>
+  <title>Stylesthetic</title>
 
   <!-- slider stylesheet -->
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
@@ -66,11 +66,11 @@
         </div>
         <a class="navbar-brand" href="index.html">
           <span>
-            Photosec
+            Stylesthetic
           </span>
         </a>
         <a href="" class="call_btn">
-          Call Us Now
+          Call Us babe
         </a>
       </nav>
     </header>
@@ -86,8 +86,8 @@
                   <div class="detail_content">
                     <div>
                       <h1>
-                        Photography <br>
-                        Studio
+                        ICONIC <br>
+                        FASHION FOR BADDIES
                       </h1>
                       <a href="" class="">
                         Read more
@@ -99,8 +99,8 @@
                   <div class="detail_content">
                     <div>
                       <h1>
-                        Photography <br>
-                        Studio
+                        ICONIC <br>
+                        FASHION FOR BADDIES
                       </h1>
                       <a href="" class="">
                         Read more
@@ -112,8 +112,8 @@
                   <div class="detail_content">
                     <div>
                       <h1>
-                        Photography <br>
-                        Studio
+                        BADDIES <br>
+                        PLAYHOUSE
                       </h1>
                       <a href="" class="">
                         Read more
@@ -171,9 +171,9 @@
             </h2>
           </div>
           <p>
-            It is a long established fact that a reader will be distracted by the readable content of a page when
-            looking at its layout. The point of using LoremIt is a long established fact that a reader will be
-            distracted by the readable content of a page when looking at its layout. The point of using Lorem
+            A team filled with stylists and fashionista's that will bring your followers and people around you to thier wits, turning heads while 
+            looking drop dead gorgeos on our merch, syles and our unmatchable rizzology. Passionate about you and your aesthetics,ready
+            to make you shine well enough for your haters to be blind.
           </p>
           <a href="">
             Read More
@@ -192,7 +192,7 @@
     <div class="container">
       <div class="heading_container heading_center">
         <h2>
-          Portfolio
+          portfolio
         </h2>
       </div>
       <div class="portfolio_container ">
