--- a/contact.html
+++ b/contact.html
@@ -174,9 +174,9 @@
             </h2>
           </div>
           <p>
-            It is a long established fact that a reader will be distracted by the readable content of a page when
-            looking at its layout. The point of using LoremIt is a long established fact that a reader will be
-            distracted by the readable content of a page when looking at its layout. The point of using Lorem
+            Reaching out to us will surely be your best bet.We help you to find your own side of fashion, your own aesthetic. All 
+            coming down to your personality and interest, even your place of work. We commend you to work with us, our services are 
+            at the tip of your fingers either, one call away, in our fashion baddie house or home services. (Charges may apply)
           </p>
           <a href="">
             Read More
@@ -268,9 +268,7 @@
             </h2>
           </div>
           <p>
-            The point of using LoremIt is a long established fact that a reader will be distracted by the readable
-            content
-            of a page when looking at its layout. The point of using Lorem
+            BE-YOUH-FUL awaits your patronage! One of our many collections this winter dont miss it. We are just one call away.
           </p>
         </div>
         <div class="col-lg-8 col-md-7 team_container text_center">
