--- a/index.html
+++ b/index.html
@@ -265,9 +265,8 @@
             </h2>
           </div>
           <p>
-            The point of using LoremIt is a long established fact that a reader will be distracted by the readable
-            content
-            of a page when looking at its layout. The point of using Lorem
+            We house the perfect team and immaculate co-operation in ICONIC BADDIES. Pledged to always make you look good and be a better  
+            version of your fashionable self, intent on making you comfortable and beautiful in your own skin. ICONIC BADDIE MAKERS. 
           </p>
         </div>
         <div class="col-lg-8 col-md-7 team_container text_center">
