--- a/team.html
+++ b/team.html
@@ -57,7 +57,7 @@
               About
             </a>
             <a class="" href="portfolio.html">
-              Portfolio
+              Goals
             </a>
             <a class="active" href="team.html">
               Team
@@ -89,9 +89,8 @@
             </h2>
           </div>
           <p>
-            The point of using LoremIt is a long established fact that a reader will be distracted by the readable
-            content
-            of a page when looking at its layout. The point of using Lorem
+            We house the perfect team and immaculate co-operation in ICONIC BADDIES. Pledged to always make you look good and be a better  
+            version of your fashionable self, intent on making you comfortable and beautiful in your own skin. ICONIC BADDIE MAKERS.
           </p>
         </div>
         <div class="col-lg-8 col-md-7 team_container text_center">
@@ -129,7 +128,7 @@
                 </div>
                 <div class="detail-box">
                   <h5>
-                    John Wayne
+                    Johnie the rapstar
                   </h5>
                   <div class="social-box">
                     <a href="">
@@ -155,7 +154,7 @@
                 </div>
                 <div class="detail-box">
                   <h5>
-                    Chritina Stark
+                    Chritina del spark
                   </h5>
                   <div class="social-box">
                     <a href="">
@@ -209,13 +208,13 @@
                 <a href="">
                   <i class="fa fa-phone" aria-hidden="true"></i>
                   <span>
-                    Call +01 1234567890
+                    Call +234 65783746
                   </span>
                 </a>
                 <a href="">
                   <i class="fa fa-envelope" aria-hidden="true"></i>
                   <span>
-                    demo@gmail.com
+                    remz@gmail.com
                   </span>
                 </a>
               </div>
