--- a/team.html
+++ b/team.html
@@ -12,7 +12,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <title>Photosec</title>
+  <title>ICONIC BADDIES</title>
 
   <!-- slider stylesheet -->
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
@@ -57,7 +57,7 @@
               About
             </a>
             <a class="" href="portfolio.html">
-              Goals
+              Portfolio
             </a>
             <a class="active" href="team.html">
               Team
@@ -102,7 +102,7 @@
                 </div>
                 <div class="detail-box ">
                   <h5>
-                    Jesssica Rai
+                    Jesssica sprinkle sprinkle
                   </h5>
                   <div class="social-box">
                     <a href="">
