--- a/portfolio.html
+++ b/portfolio.html
@@ -66,11 +66,11 @@
         </div>
         <a class="navbar-brand" href="index.html">
           <span>
-            Photosec
+            ICONIC BADDIES
           </span>
         </a>
         <a href="" class="call_btn">
-          Call Us Now
+          Call Us Babe 
         </a>
       </nav>
     </header>
