--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
                   <div class="detail_content">
                     <div>
                       <h1>
-                        ICONIC <br>
-                        FASHION FOR BADDIES
+                        HEY<br>
+                        BADDIE!
                       </h1>
                       <a href="" class="">
                         Read more
